--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,6 +69,12 @@
                     android:onClick="register"
                     android:text="ok" />
 
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/shopping_cart_woman" />
+
             </LinearLayout>
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
