--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -3,5 +3,5 @@
        android:shape="rectangle">
     <solid android:color="@android:color/transparent" />
     <corners android:radius="8dp" />
-    <stroke android:width="2dp" android:color="#ffffff" />
+    <stroke android:width="2dp" android:color="@color/colorAccent" />
 </shape>
