--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -91,6 +91,8 @@
 
                 <Button
                     android:id="@+id/photoButton"
+                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                    android:background="@drawable/button_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -99,6 +101,8 @@
 
                 <Button
                     android:id="@+id/galleryButton"
+                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                    android:background="@drawable/button_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -108,6 +112,8 @@
 
             <Button
                 android:id="@+id/sellButton"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                android:background="@drawable/button_style"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
