--- a/app/src/main/res/layout/activity_buyer.xml
+++ b/app/src/main/res/layout/activity_buyer.xml
@@ -9,6 +9,8 @@ tools:context=".View.BuyerActivity">
 
     <Button
         android:id="@+id/discoverButton"
+        style="@android:style/Widget.DeviceDefault.Button.Borderless"
+        android:background="@drawable/button_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
@@ -23,6 +25,8 @@ tools:context=".View.BuyerActivity">
 
     <Button
         android:id="@+id/wish_listButton"
+        style="@android:style/Widget.DeviceDefault.Button.Borderless"
+        android:background="@drawable/button_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/discoverButton"
