--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,19 +58,23 @@
 
                     <Button
                         android:id="@+id/sign_in"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:layout_weight="1"
+                        android:background="@drawable/button_style"
                         android:onClick="sign_in"
                         android:text="sign in" />
 
                     <Button
                         android:id="@+id/register"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:layout_weight="1"
+                        android:background="@drawable/button_style"
                         android:onClick="register"
                         android:text="register" />
                 </LinearLayout>
