--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -62,6 +62,8 @@
 
                 <Button
                     android:id="@+id/button"
+                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                    android:background="@drawable/button_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
