--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -70,6 +70,8 @@
 
         <Button
             android:id="@+id/send"
+            style="@android:style/Widget.DeviceDefault.Button.Borderless"
+            android:background="@drawable/button_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
