--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -30,6 +30,8 @@
         android:layout_below="@+id/sellButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
+        android:layout_alignLeft="@id/sellButton"
+        android:layout_alignRight="@id/sellButton"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="I am a buyer"
@@ -44,7 +46,8 @@
         android:layout_below="@+id/buyerButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:onClick="startMessageActivity"
+        android:layout_alignLeft="@id/sellButton"
+        android:layout_alignRight="@id/sellButton"
         android:text="MESSAGES"
         android:textSize="25sp" />
 
