--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -24,14 +24,15 @@
     <Button
         android:id="@+id/buyerButton"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
-        android:background="@drawable/button_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/sellButton"
+        android:layout_alignLeft="@+id/sellButton"
+        android:layout_alignRight="@+id/sellButton"
+        android:layout_alignStart="@+id/sellButton"
         android:layout_below="@+id/sellButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:layout_alignLeft="@id/sellButton"
-        android:layout_alignRight="@id/sellButton"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_style"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="I am a buyer"
@@ -45,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buyerButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:layout_alignLeft="@id/sellButton"
         android:layout_alignRight="@id/sellButton"
         android:text="MESSAGES"
