--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,6 +61,8 @@
                         style="@android:style/Widget.DeviceDefault.Button.Borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="10dp"
                         android:layout_marginTop="16dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_style"
@@ -72,6 +74,8 @@
                         style="@android:style/Widget.DeviceDefault.Button.Borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="0dp"
                         android:layout_marginTop="16dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_style"
